# AG_CLion

clion/: CMakeLists.txt  prepare-debug.bat  prepare-release.bat
clion/Geometry/: BasicGeometry.h  Circle.cpp  Circle.h  Line.cpp  Line.h  Point.cpp  PointCloud.cpp  Polygon.cpp  RayLine.cpp  RayLine.h  SegmentLine.cpp  SegmentLine.h  ShaderProgram.cpp  ShaderProgram.h  Triangle.cpp  Triangle.h  Vect2d.cpp  Vect2d.h  Vertex.cpp  Voxelization.cpp  Voxelization.h  main.cpp
clion/PrecompiledHeaders/: InclDraw2D.h
clion/Rendering/: CameraGuiAdapter.h  DrawCircle.cpp  DrawCircle.h  DrawLine.cpp  DrawLine.h  DrawMesh.cpp  DrawRay.cpp  DrawTriangle.h  GUI.cpp  Model3D.cpp  Renderer.cpp  Renderer.h  SceneContent.cpp  SceneContent.h  VAO.cpp  VAO.h
vs/: AG2223.sln
vs/Source/: AG2223.vcxproj  AG2223.vcxproj.filters
vs/Source/Geometry/: Circle.h  Line.h  Point.h  PointCloud.h  Polygon.h  Triangle.h  Vertex.h
vs/Source/PrecompiledHeaders/: InclGeom2D.h  stdafx.h
vs/Source/Rendering/: ApplicationState.h  Camera.h  CameraProjection.h  DrawCircle.cpp  DrawLine.cpp  DrawMesh.h  DrawPoint.cpp  DrawPoint.h  DrawPointCloud.cpp  DrawPointCloud.h  DrawPolygon.cpp  DrawPolygon.h  DrawRay.cpp  DrawRay.h  DrawSegment.cpp  DrawSegment.h  DrawTriangle.cpp  DrawVoxelization.cpp  DrawVoxelization.h  FBOScreenshot.h  GUI.cpp  GUI.h  Model3D.h  RenderingShader.h  Window.cpp
